<resources>
    <string name="app_name">Water Plants</string>
    <string name="title_home">Home</string>
    <string name="title_system">System</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_plants">Plants</string>
    <string name="title_test">Test</string>
    <string name="home_connect">Connect</string>
    <string name="system_hose">Hose</string>
    <string name="system_next_watering">Next watering</string>
    <string name="system_amount">Amount</string>
    <string name="system_interval">Interval</string>
    <string name="system_update">Update</string>
    <string name="system_empty">...</string>
    <string name="system_receive">Receive updates</string>
    <string name="system_water_level">Water level:</string>
    <string name="system_watered">Watered</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="system_days">days</string>
    <string name="system_hours">hours</string>
    <string name="connection_status">Connection status:</string>
    <string name="home_disconnect">Disconnect</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="grid_plant_image">Plant image</string>
    <string name="schedule_hose">Hose:</string>
    <string name="plants_name">Name:</string>
    <string name="plants_empty">...</string>
    <string name="plants_image">Image:</string>
    <string name="plants_image_placeholder">Plant Image</string>
    <string name="plants_interval">Interval (days):</string>
    <string name="plants_time">Time of day (0-23):</string>
    <string name="plants_amount">Amount (mL):</string>
    <string name="plants_save">Save</string>
    <string name="schedule_send">Send To System</string>
    <string name="system_1">1</string>
    <string name="system_2">2</string>
    <string name="system_3">3</string>
</resources>