<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_system"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_system" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_plants"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/title_plants" />

    <item
        android:id="@+id/navigation_test"
        android:icon="?android:attr/actionModeFindDrawable"
        android:title="@string/title_test" />

</menu>