<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.waterplants.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_system"
        android:name="com.example.waterplants.ui.system.SystemFragment"
        android:label="@string/title_system"
        tools:layout="@layout/fragment_system" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.waterplants.ui.schedule.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_plants"
        android:name="com.example.waterplants.ui.plants.PlantsFragment"
        android:label="@string/title_plants"
        tools:layout="@layout/fragment_plants" />

    <fragment
        android:id="@+id/navigation_test"
        android:name="com.example.waterplants.ui.test.TestFragment"
        android:label="@string/title_test"
        tools:layout="@layout/fragment_test" />
</navigation>