<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plants.PlantsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="65dp"
        android:gravity="top"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <GridView
            android:id="@+id/gridView_plants"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:numColumns="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_plants_connection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/connection_status" />

                    <ImageView
                        android:id="@+id/image_plants_connection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:contentDescription="@string/connection_status"
                        android:scaleType="centerInside"
                        android:src="@drawable/baseline_bluetooth_disabled_24" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_plants_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plants_name" />

                    <EditText
                        android:id="@+id/edit_plants_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="Daffodil"
                        android:inputType="text"
                        android:maxLines="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_plants_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plants_image" />

                    <ImageView
                        android:id="@+id/image_plants_plant"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/plants_image_placeholder" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_plants_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plants_interval" />

                    <EditText
                        android:id="@+id/edit_plants_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="7"
                        android:inputType="number"
                        android:maxLines="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_plants_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plants_time" />

                    <EditText
                        android:id="@+id/edit_plants_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="12"
                        android:inputType="number"
                        android:maxLines="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_plants_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plants_amount" />

                    <EditText
                        android:id="@+id/edit_plants_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autofillHints="20"
                        android:inputType="number"
                        android:maxLines="1" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:enabled="false"
                android:text="@string/plants_save" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>