<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.system.SystemFragment">

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="243dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_system_water_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/system_water_level" />

        <ImageView
            android:id="@+id/image_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/connection_status"
            android:src="@drawable/baseline_bluetooth_disabled_24"
            android:scaleType="centerInside"/>
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_system_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_linear">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_system_plant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_hose" />

            <TextView
                android:id="@+id/text_system_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_next_watering" />

            <TextView
                android:id="@+id/text_system_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_amount" />

            <TextView
                android:id="@+id/text_system_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_interval" />

            <TextView
                android:id="@+id/text_system_watered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_watered" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_system_hose1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_next1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_amount1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_interval1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_watered1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_empty" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_system_hose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_next2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_amount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_interval2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_watered2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_empty" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_system_hose3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_next3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_amount3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_interval3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/system_empty" />

            <TextView
                android:id="@+id/text_system_watered3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_empty" />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/button_system_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:layout_marginBottom="100dp"
        android:text="@string/system_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>